fixed overflow auto bug

--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ h2 {
 	background-size: cover;
 	padding: 20px;
 	border: 2px solid #333333;
+	overflow: auto;
 }
 
 .projectBox:hover {
